Let's see if the z-index correction of the sidebar in mobile is fixed and it allows us to use the links

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -152,7 +152,6 @@ canvas {
 	top: 2vh;
 	border-radius: 15px;
 	text-align: center;
-	z-index: 10;
 	transition: 0.5s ease;
 }
 
